# modern-analytics-stack

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  requirements.txt
dagster_project/: __init__.py
dagster_project/assets/: __init__.py
dagster_project/jobs/: __init__.py
dagster_project/resources/: __init__.py
dagster_project/schedules/: __init__.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: dim_users.sql  fct_events.sql  growth_drivers.sql  growth_metrics.sql  miles_analytics.sql  quick_ratio_analysis.sql  retention_cohorts.sql  retention_quality_framework.sql  schema.yml  social_capital_growth_accounting.sql  user_resurrection_analysis.sql  users_with_negative_miles.sql
dbt/models/staging/: schema.yml  stg_raw_user_events.sql
scripts/: data_ingestion.py  setup.sh
